--- a/public/css/night-vision.css
+++ b/public/css/night-vision.css
@@ -1,14 +1,3 @@
-/* Основные стили для сайта */
-/* body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    transition: background-color 0.3s, color 0.3s;
-} */
-
-
-
-/* Слой затемнения, по умолчанию невидим */
 #dark-mode-overlay {
     position: fixed;
     top: 0;
@@ -19,5 +8,5 @@
     background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0) 100px, rgba(0, 0, 0, 0.8) 250px, rgba(0, 0, 0, 0.95) 500px);
     transition: background-position 0.05s ease;
     z-index: 9999;
-    display: none; /* по умолчанию скрыт */
+    display: none;
 }
